tests/error/remainderInteger-wrong-2nd-argument-data.uplc
(program 1.0.0[[(builtin remainderInteger)(con integer 10)](con data {ByteString #AFD3})])